--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
-
+  <head>
+    <style>
+      h1{
+        font-size: 100px;
+        color: green;
+      }
+    </style>
+  </head>
 <body>
   <h1>ASMEROM FESSEHAYE HABTEAB</h1>
   <p>Welcome to my website!</p>
