--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
       <title>Challeneg for Change</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-      <link rel="stylesheet" href="./assets/css/styles.css" />
+      <link rel="stylesheet" href="styles.css" />
       <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
 
   <body>
     <header>
       <div class="logo">
-        <img src="./assets/images/logo.png" />
+        <img src="logo.png" />
       </div>
       <nav>
         <ul>
@@ -76,19 +76,19 @@
           <h2 class="title" id="teamsLink">Our Team</h2>
           <div class="container">
             <div class="item ceo">
-              <img src="./assets/images/ceo.jpg" />
+              <img src="ceo.jpg" />
               <h3>Tom Adams</h3>
               <p>C.E.O. - Founder and Principal Investor</p>
             </div>
             
             <div class="item ceo">
-              <img src="./assets/images/recurit.jpg" />
+              <img src="recurit.jpg" />
               <h3>John Roberts</h3>
               <p>Recuritment head - Advising and Consulting</p>
             </div>
 
             <div class="item ceo">
-              <img src="./assets/images/advertise.jpg" />
+              <img src="advertise.jpg" />
               <h3>Hanna Mark</h3>
               <p>Advertising department - customer support and assistance</p>
             </div>
