--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>Challeneg for Change</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-      <link rel="stylesheet" href="styles.css" />
+      <link rel="stylesheet" href="style.css" />
       <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   </head>
 
