--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
-<a href="./1.DasmotoArtsCrafts/">1.DasmotoArtsCrafts</a>
-<a href="1.DasmotoArtsCrafts"></a>
-<a href="1.DasmotoArtsCrafts"></a>
-<a href="1.DasmotoArtsCrafts"></a>
-<a href="1.DasmotoArtsCrafts"></a>
-<a href="1.DasmotoArtsCrafts"></a>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="./styles.css">
+  </head>
+  <body>
+     <a href="./1.DasmotoArtsCrafts/">1.DasmotoArtsCrafts</a>
+    <a href="1.DasmotoArtsCrafts"></a>
+    <a href="1.DasmotoArtsCrafts"></a>
+    <a href="1.DasmotoArtsCrafts"></a>
+    <a href="1.DasmotoArtsCrafts"></a>
+    <a href="1.DasmotoArtsCrafts"></a>
+  </body>
+</html>
