--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-     <a href="1.DasmotoArtsCrafts/index.html">1.DasmotoArtsCrafts</a>
+     <a href="./Codecademy/1.DasmotoArtsCrafts/">1.DasmotoArtsCrafts</a>
     <a href="1.DasmotoArtsCrafts"></a>
     <a href="1.DasmotoArtsCrafts"></a>
     <a href="1.DasmotoArtsCrafts"></a>
