--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
     <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
-     <a href="./Codecademy/1.DasmotoArtsCrafts/">1.DasmotoArtsCrafts</a>
-    <a href="1.DasmotoArtsCrafts"></a>
-    <a href="1.DasmotoArtsCrafts"></a>
-    <a href="1.DasmotoArtsCrafts"></a>
-    <a href="1.DasmotoArtsCrafts"></a>
-    <a href="1.DasmotoArtsCrafts"></a>
+    <ul>
+       <li><a href="./Codecademy/1.DasmotoArtsCrafts/">DasmotoArtsCrafts</a></li>
+       <li><a href="./Codecademy/2.html-css-cheatsheet-starting/">html-css-cheatsheet-starting</a></li>
+       <li><a href="./Codecademy/3.website-design-system-starting/">website-design-system-starting</a></li>
+       <li><a href="./Codecademy/4.Tea Cozy/">Tea Cozy</a></li>
+       <li><a href="./Codecademy/5. Photomatic/">Photomatic</a></li>
+       <li><a href="./Codecademy/6.Flexbox-business-site-starting/">Flexbox-business-site-startings</a></li>
+       <li><a href="./Codecademy/7. Art Club/">Art Club</a></li>
+    </ul>
+
+
+
+
+
+
   </body>
 </html>
