--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <ul>
+    <h1>List of projects Codecademy - Full-Stack-Engineer</h1>
+    <ol>
        <li><a href="./Codecademy/1.DasmotoArtsCrafts/">DasmotoArtsCrafts</a></li>
        <li><a href="./Codecademy/2.html-css-cheatsheet-starting/">html-css-cheatsheet-starting</a></li>
        <li><a href="./Codecademy/3.website-design-system-starting/">website-design-system-starting</a></li>
@@ -12,7 +13,7 @@
        <li><a href="./Codecademy/5. Photomatic/">Photomatic</a></li>
        <li><a href="./Codecademy/6.Flexbox-business-site-starting/">Flexbox-business-site-startings</a></li>
        <li><a href="./Codecademy/7. Art Club/">Art Club</a></li>
-    </ul>
+    </ol>
 
 
 
