--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
        <li><a href="./Codecademy/4.Tea Cozy/">Tea Cozy</a></li>
        <li><a href="./Codecademy/5.Photomatic/">Photomatic</a></li>
        <li><a href="./Codecademy/6.Flexbox-business-site-starting/">Flexbox-business-site-startings</a></li>
-       <li><a href="./Codecademy/7.Art Club/">Adventure Club</a></li>
+       <li><a href="./Codecademy/7.Adventure Club/">Adventure Club</a></li>
     </ol>
   </body>
 </html>
