--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <div>
+    <div style="background-color: #08C">
           <h1>List of projects Codecademy - Full-Stack-Engineer</h1>
           <ol>
              <li><a href="./Codecademy/1.DasmotoArtsCrafts/">DasmotoArtsCrafts</a></li>
              <li><a href="./Codecademy/2.html-css-cheatsheet-starting/">Html-Css-cheatsheet-starting</a></li>
              <li><a href="./Codecademy/3.website-design-system-starting/">Website-design-system-starting</a></li>
              <li><a href="./Codecademy/4.Tea Cozy/">Tea Cozy</a></li>
-             <li><a href="./Codecademy/5.Photomatic/">Photomatic</a></li>
+             <li><a href="./Codecademy/5.Photomatic/Final/">Photomatic</a></li>
              <li><a href="./Codecademy/6.Flexbox-business-site-starting/">Flexbox-business-site-startings</a></li>
              <li><a href="./Codecademy/7.Adventure Club/">Adventure Club</a></li>
           </ol>
