--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div style="background-color: #08C">
+    <div>
           <h1>List of projects Codecademy - Full-Stack-Engineer</h1>
           <ol>
              <li><a href="./Codecademy/1.DasmotoArtsCrafts/">DasmotoArtsCrafts</a></li>
