--- a/Codecademy/7.Adventure Club/index.html
+++ b/Codecademy/7.Adventure Club/index.html
@@ -87,10 +87,10 @@
     <footer>
         <nav>
             <ul>
-                <a href=""><li>Events</li></a>
-                <a href=""><li>Results</li></a>
-                <a href=""><li>Partnering Restaurants</li></a>
-                <a href=""><li>Contact Us</li></a>
+                <li><a href="">Events</a></li>
+                <li><a href="">Results</a></li>
+                <li><a href="">Partnering Restaurants</a></li>
+                <li><a href="">Contact Us</a></li>
               </ul>
         </nav>
         <span>Copy right@2023 Adventure Club</span>
