--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div>
-          <h1>List of projects Codecademy - Full-Stack-Engineer</h1>
+          <h1>List of projects HTML and CSS projects</h1>
           <ol>
-             <li><a href="./Codecademy/1.DasmotoArtsCrafts/">DasmotoArtsCrafts</a></li>
-             <li><a href="./Codecademy/2.html-css-cheatsheet-starting/">Html-Css-cheatsheet-starting</a></li>
-             <li><a href="./Codecademy/3.website-design-system-starting/">Website-design-system-starting</a></li>
-             <li><a href="./Codecademy/4.Tea Cozy/">Tea Cozy</a></li>
-             <li><a href="./Codecademy/5.Photomatic/Final/">Photomatic</a></li>
-             <li><a href="./Codecademy/6.Flexbox-business-site-starting/">Flexbox-business-site-startings</a></li>
-             <li><a href="./Codecademy/7.Adventure Club/">Adventure Club</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/01.aasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/02.html-css-cheatsheet-starting/">HTML-CSS Cheatsheet</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/03.website-design-system-starting/">Website Design Guide</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/04.tea-cozy/">Tea Cozy</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/05.photomatic/Final/">Photomatic</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/06.flexbox-business-site-starting/">Flexbox Business Site</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/07.adventure-club/">Adventure Club</a></li>
           </ol>
     </div>
   </body>
