--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
           <h1>List of projects HTML and CSS projects</h1>
           <ol>
-             <li><a href="./Codecademy/full-stack/html-css/01.aasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
+             <li><a href="./Codecademy/full-stack/html-css/01.dasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
              <li><a href="./Codecademy/full-stack/html-css/02.html-css-cheatsheet-starting/">HTML-CSS Cheatsheet</a></li>
              <li><a href="./Codecademy/full-stack/html-css/03.website-design-system-starting/">Website Design Guide</a></li>
              <li><a href="./Codecademy/full-stack/html-css/04.tea-cozy/">Tea Cozy</a></li>
