--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div>
-          <h1>List of projects HTML and CSS projects</h1>
+    <h1>Codecademy Full Stack Engineer Projects</h1>
+    <div class="html-css">
+          <h2>List of projects HTML and CSS projects</h2>
           <ol>
              <li><a href="./Codecademy/full-stack/html-css/01.dasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
              <li><a href="./Codecademy/full-stack/html-css/02.html-css-cheatsheet-starting/">HTML-CSS Cheatsheet</a></li>
@@ -16,6 +17,12 @@
              <li><a href="./Codecademy/full-stack/html-css/05.photomatic/Final/">Photomatic</a></li>
              <li><a href="./Codecademy/full-stack/html-css/06.flexbox-business-site-starting/">Flexbox Business Site</a></li>
              <li><a href="./Codecademy/full-stack/html-css/07.adventure-club/">Adventure Club</a></li>
+          </ol>
+    </div>
+    <div class="java-script">
+          <h2>Java Script projects</h2>
+          <ol>
+             <li><a href="./Codecademy/full-stack/java-script/01.personal-portfolio/">Portfolio Website</a></li>
           </ol>
     </div>
   </body>
