--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="Portfolio">
       <h2>HTML and CSS and JS (Interactivity)</h2>
       <ul>
-        <li><a href="./Codecademy/full-stack/java-script/01.personal-portfolio">Personal Portfolio Website</a></li>
+        <li><a href="./Codecademy/full-stack/java-script/01.personal-portfolio/">Personal Portfolio Website</a></li>
       </ul>
       <h2>Java Script</h2>
       <ul>
