--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
     <div class="html-css">
           <h2>List of projects HTML and CSS projects</h2>
           <ol>
-             <li><a href="./Codecademy/full-stack/html-css/01.dasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/02.html-css-cheatsheet-starting/">HTML-CSS Cheatsheet</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/03.website-design-system-starting/">Website Design Guide</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/04.tea-cozy/">Tea Cozy</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/05.photomatic/Final/">Photomatic</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/06.flexbox-business-site-starting/">Flexbox Business Site</a></li>
-             <li><a href="./Codecademy/full-stack/html-css/07.adventure-club/">Adventure Club</a></li>
+             <li><a href="./Codecademy/html-css/01.dasmoto-arts-crafts/">Dasmoto Arts Crafts</a></li>
+             <li><a href="./Codecademy/html-css/02.html-css-cheatsheet-starting/">HTML-CSS Cheatsheet</a></li>
+             <li><a href="./Codecademy/html-css/03.website-design-system-starting/">Website Design Guide</a></li>
+             <li><a href="./Codecademy/html-css/04.tea-cozy/">Tea Cozy</a></li>
+             <li><a href="./Codecademy/html-css/05.photomatic/Final/">Photomatic</a></li>
+             <li><a href="./Codecademy/html-css/06.flexbox-business-site-starting/">Flexbox Business Site</a></li>
+             <li><a href="./Codecademy/html-css/07.adventure-club/">Adventure Club</a></li>
           </ol>
     </div>
     <div class="java-script">
