--- a/Codecademy/interactive-websites/01.personal-portfolio/index.html
+++ b/Codecademy/interactive-websites/01.personal-portfolio/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#about-me">About Me</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
         <main>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
             </section>
-            <section class="contact">
+            <section class="contact" id="contact">
                 <h2>Contact Me</h2>
                 <form action="#" method="post">
                     <div class="container">
