--- a/Codecademy/interactive-websites/01.personal-portfolio/index.html
+++ b/Codecademy/interactive-websites/01.personal-portfolio/index.html
@@ -191,7 +191,7 @@
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#skills">Skills</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
         </footer>
