--- a/Codecademy/interactive-websites/01.personal-portfolio/index.html
+++ b/Codecademy/interactive-websites/01.personal-portfolio/index.html
@@ -30,7 +30,7 @@
                 <h2>About Me</h2>
                 <p>
                     Hi! I'm Asmerom, curious and hard working software developer.
-                    Currently, I am taking the full-stack engineer course from Codecademy. 
+                    Currently, as part of the <a href="https://itcareerswitch.co.uk/coding-traineeship/?gad_source=1&gclid=Cj0KCQiAoeGuBhCBARIsAGfKY7yELF7ElLvIYUG9AqQM9mlbkofcNVXcOZbb7xloh2kokDrwQjd89lAaAnt7EALw_wcB">IT CAREER SWITCH CODING TRAINEESHIP</a>, I am taking the full-stack engineer course from Codecademy. 
                     I am delighted to share my coding experience and resources. 
                     My ultimate goal is to be a professional software developer. 
                     I love coding and in my free time I love listening to music and surfing the internet.
