--- a/Codecademy/interactive-websites/01.personal-portfolio/index.html
+++ b/Codecademy/interactive-websites/01.personal-portfolio/index.html
@@ -117,10 +117,10 @@
                     <div class="item">
                         <h3>Back-End</h3>
                         <ul>
-                            <li>Node JS</li>
+                            <li>C# .NET</li>
                             <li>PHP</li>
                             <li>Java</li>
-                            <li>C# .NET</li>
+                            <li>Node JS</li>
                         </ul>
                     </div>
                     <div class="item">
@@ -128,7 +128,7 @@
                         <ul>
                             <li>MS SQL server</li>
                             <li>MySQL Server</li>
-                            <li>Oracle Database</li>
+                            <li>PostgreSQL</li>
                         </ul>
                     </div>
                 </div>
